# winzy-taskloop

./: README.md  pyproject.toml
tests/: test_winzy_taskloop.py
winzy_taskloop/: __init__.py
