[project]
name = "winzy-taskloop"
version = "0.0.1"
description = "Run tasks in loop from cli"
readme = "README.md"
authors = [{name = "sukhbinder singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-taskloop"
Changelog = "https://github.com/sukhbinder/winzy-taskloop/releases"
Issues = "https://github.com/sukhbinder/winzy-taskloop/issues"
CI = "https://github.com/sukhbinder/winzy-taskloop/actions"

[project.entry-points."winzy.plugins"]
taskloop = "winzy_taskloop:taskloop_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
